Fixed Featured Products overflow
Fixed Featured Products overflow:
Issue was that products displayed on a row on mobile, while they should have been a column. Fixed by adding wrapping on the webshop-row class, which is removed when there are more than 3 items on the page

--- a/css/styles.css
+++ b/css/styles.css
@@ -183,6 +183,7 @@ nav{
     flex-direction: row;
     justify-content: center;
     margin: auto;
+    flex-wrap: wrap;
 }
 
 .not-in-stock{
